fix vertical scrollbar bug

--- a/src/style/global.css
+++ b/src/style/global.css
@@ -4,18 +4,17 @@
   box-sizing: border-box;
 }
 
-html,
-body {
-  height: auto;
-  margin: 0;
-  overflow-x: hidden;
-  overflow-y: auto;
-  width: 100%;
+html {
+  height: 100%;
 }
 
 body {
   background-color: #eef1f2;
   font-family: "Lato", Helvetica, sans-serif;
+  margin: 0;
+  min-height: 100%;
+  overflow-x: hidden;
+  overflow-y: auto;
 }
 
 #root {
